Wed Oct 14 14:41:03 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
          Added include "ace/os_include/os_pthread.h" since LynxOS defines
          pthread_sigmask() in pthread.h.

Tue Oct 13 19:13:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
          Cleaned up ace_fileno_helper implementation and fixed compile
          problem on MinGW.

        * ace/os_include/os_unistd.h:
          Redefined ACE_STD{IN,OUT,ERR}.
          OS_Test now hopefully passes on all platforms.

Tue Oct 13 19:00:53 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Removed non-functional cross compiler setup.

Tue Oct 13 18:56:22 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Reverted:

          Mon Oct 13 11:10:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

                  * include/makeinclude/platform_lynxos.GNU:
                    Problems with Lynxos5.0 due to -mshared being passed to compiler
                    (inaddition to linker)

          -mshared is needed on LynxOS 4.x. Need to find another
          solution for LynxOS 5.0

Tue Oct 13 10:03:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/rules.local.GNU:
          When using cp to install a library, make sure we check date/time
          in order to check if we need to copy. Thanks to Abdul Sowayan
          <sowayan at gmail dot com> for reporting this. This fixes bugzilla
          3728

Tue Oct 13 09:44:48 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/INET_Addr_Test.cpp:
          Extended this test to for is_multicast. This fails on little endian
          machines at this moment. Thanks to Patrick Rabau
          <pr2345 at gmail dot com> for extending this test. This is related
          to bugzilla 3729
