@@ -32,7 +32,8 @@
   // # define ACE_HAS_POWERPC_TIMER
 #endif /* __x86__ || __powerpc__ */
 
-#define ACE_DEFAULT_BASE_ADDR ((char *) 0)
+#define ACE_HAS_2_PARAM_ASCTIME_R_AND_CTIME_R
+#define ACE_HAS_3_PARAM_READDIR_R
 #define ACE_HAS_4_4BSD_SENDMSG_RECVMSG
 #define ACE_HAS_ALLOCA
 #define ACE_HAS_ALLOCA_H
@@ -45,35 +46,55 @@
 #define ACE_HAS_CLOCK_SETTIME
 #define ACE_HAS_CPLUSPLUS_HEADERS
 #define ACE_HAS_DIRENT
+#define ACE_HAS_GETIFADDRS
 #define ACE_HAS_GETPAGESIZE
 #define ACE_HAS_GETRUSAGE
+#define ACE_HAS_GETRUSAGE_PROTOTYPE
 #define ACE_HAS_GNU_CSTRING_H
 #define ACE_HAS_GPERF
+#define ACE_HAS_HANDLE_SET_OPTIMIZED_FOR_SELECT
 #define ACE_HAS_ICMP_SUPPORT 1
 #define ACE_HAS_IP_MULTICAST
+#define ACE_HAS_MEMCHR
+#define ACE_HAS_MKDIR
 #define ACE_HAS_MSG
+#define ACE_HAS_NANOSLEEP
+#define ACE_HAS_NEW_NOTHROW
 #define ACE_HAS_NONCONST_CLOCK_SETTIME
 #define ACE_HAS_NONCONST_MSGSND
 #define ACE_HAS_NONCONST_READV
 #define ACE_HAS_NONCONST_SELECT_TIMEVAL
 #define ACE_HAS_NONCONST_SETRLIMIT
 #define ACE_HAS_NONCONST_WRITEV
+#define ACE_HAS_POSITION_INDEPENDENT_POINTERS 1
 #define ACE_HAS_POSIX_NONBLOCK
 #define ACE_HAS_POSIX_TIME
 #define ACE_HAS_RECURSIVE_THR_EXIT_SEMANTICS
+//#define ACE_HAS_REENTRANT_FUNCTIONS
 #define ACE_HAS_SCANDIR
+#define ACE_HAS_SIGACTION_CONSTP2
 #define ACE_HAS_SIGINFO_T
 #define ACE_HAS_SIGSUSPEND
 #define ACE_HAS_SIGTIMEDWAIT
 #define ACE_HAS_SIGWAIT
 #define ACE_HAS_SIG_ATOMIC_T
+#define ACE_HAS_SIG_C_FUNC
+#define ACE_HAS_SOCKADDR_IN6_SIN6_LEN
+#define ACE_HAS_SOCKADDR_IN_SIN_LEN
+#define ACE_HAS_SOCKADDR_MSG_NAME
 #define ACE_HAS_SSIZE_T
 #define ACE_HAS_STREAMS
 #define ACE_HAS_STRERROR
+#define ACE_HAS_STRINGS
+#define ACE_HAS_STRING_CLASS
+#define ACE_HAS_SYSCTL
+#define ACE_HAS_SYS_ERRLIST
+#define ACE_HAS_SYS_FILIO_H
 #define ACE_HAS_SYS_SIGLIST
 #define ACE_HAS_SYS_SOCKIO_H
 #define ACE_HAS_TERMIOS
 #define ACE_HAS_TIMEZONE_GETTIMEOFDAY
+
 #define ACE_LACKS_ALPHASORT_PROTOTYPE
 #define ACE_LACKS_CONST_TIMESPEC_PTR
 #define ACE_LACKS_GETPGID
@@ -90,12 +111,13 @@
 #define ACE_LACKS_SETEUID
 #define ACE_LACKS_SIGINFO_H
 #define ACE_LACKS_STRPTIME
-#define ACE_LACKS_SUSECONDS_T
 #define ACE_LACKS_SWAB_PROTOTYPE
 #define ACE_LACKS_TIMESPEC_T
 #define ACE_LACKS_UCONTEXT_H
-#define ACE_LACKS_VSNPRINTF
-#define ACE_LACKS_WCHAR_H
+#define ACE_LACKS_SUSECONDS_T
+
+#define ACE_DEFAULT_BASE_ADDR ((char *) 0)
+#define ACE_EXPLICIT_TEMPLATE_DESTRUCTOR_TAKES_ARGS
 #define ACE_MALLOC_ALIGN 8
 #define ACE_PAGE_SIZE 4096
 #define ACE_POSIX_SIG_PROACTOR
@@ -107,10 +129,14 @@
 #if ACE_MT_SAFE == 1
   // Platform supports threads.
 # define ACE_HAS_PTHREADS
+# define ACE_HAS_PTHREADS_STD
+# define ACE_HAS_PTHREADS_UNIX98_EXT
+# define ACE_HAS_PTHREAD_GETCONCURRENCY
+# define ACE_HAS_PTHREAD_SETCONCURRENCY
+# define ACE_HAS_PTHREAD_SIGMASK_PROTOTYPE
 # define ACE_HAS_THREAD_SPECIFIC_STORAGE
-# define ACE_LACKS_NULL_PTHREAD_STATUS
-# define ACE_LACKS_THREAD_PROCESS_SCOPING
 # define ACE_LACKS_PTHREAD_ATTR_SETSTACK
+# define ACE_LACKS_THREAD_PROCESS_SCOPING
 # if ACE_LYNXOS_MAJOR == 4 && ACE_LYNXOS_MINOR == 0
 #   define ACE_LACKS_SETDETACH
 #   define ACE_LACKS_PTHREAD_ATTR_SETSTACKADDR
@@ -138,8 +164,6 @@
 # define ACE_LACKS_STRCASECMP_PROTOTYPE
 # define ACE_LACKS_STRNCASECMP_PROTOTYPE
 # define ACE_LACKS_SYS_SELECT_H
-# define ACE_HAS_NONCONST_GETBY
-# define ACE_HAS_NONCONST_INET_ADDR
 #endif
 
 #if (ACE_LYNXOS_MAJOR > 4) || (ACE_LYNXOS_MAJOR == 4 && ACE_LYNXOS_MINOR >= 2)
@@ -152,11 +176,8 @@
 // LynxOS 5.0 Additons
 #  define ACE_HAS_GETIFADDRS
 #  define ACE_HAS_LYNXOS50_SIGNALS
-#  define ACE_HAS_NONCONST_GETBY
 #  define ACE_HAS_NONCONST_INET_ADDR
 #  define ACE_LACKS_INET_ATON_PROTOTYPE
-#  define ACE_LACKS_MKSTEMP
-#  define ACE_LACKS_RLIMIT
 #  define ACE_LACKS_SEMBUF_T
 #  define ACE_LACKS_STROPTS_H
 #  define ACE_LACKS_STRRECVFD
@@ -168,10 +189,12 @@
 #  define ACE_HAS_SEMUN
 #  define ACE_HAS_STRBUF_T
 #  define ACE_HAS_SYSV_IPC
-#  define ACE_LACKS_USECONDS_T
 #  define ACE_LACKS_ISBLANK
 #  define ACE_LACKS_SETENV
 #  define ACE_LACKS_UNSETENV
+#  define ACE_LACKS_USECONDS_T
+#  define ACE_LACKS_VSNPRINTF
+#  define ACE_LACKS_WCHAR_H
 #endif
 
 #if defined (ACE_HAS_SVR4_DYNAMIC_LINKING)
